--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,14 @@ body{
     background-color: rgb(226, 230, 252);
 }
 
+ h1{
+    text-transform: uppercase;
+   }
 
+article p{
+   margin-top: 5px;
+   margin-bottom: 25px;
+}
 .header{
      background-color: rgb(202, 101, 101);
      display: flex;
@@ -65,18 +72,7 @@ a{
     
 }
 
-.section_container_article{
-    background-color: rgb(252, 205, 148);
-    width: 100%;
-    margin: 0 auto;
-    height: auto;
-    text-align: center;
-    padding-top: 10px;
-}
-.section_container_article p{
-    padding-top: 10px;
-    font-size: 20px;
-}
+
 
 .form-example{
     display: flex;
@@ -268,17 +264,34 @@ a{
 @media (min-width: 1000px) {
  
    .section{
-    display: flex; 
-    flex-direction: row;   
-     flex-wrap: wrap; 
-    width: 90%;
+   
+     /* flex-wrap: wrap;  */
+    width: 80%;
     margin: 0 auto;
+   }
+   article{
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-color: black;
+    border-radius: 25px;
+    background-color: rgb(248, 238, 218);
+    padding: 10px;
+    margin-bottom: 25px;
+
    }
    
    .section_container{
-    max-width: 450px;
+    /* max-width: 450px; */
     margin-bottom: 75px;
     margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: wrap; */
    }
+  
+  
 
 }
