--- a/styles/style.css
+++ b/styles/style.css
@@ -1,312 +1,360 @@
-*{
-    margin: 0;
-	padding: 0; 
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: rgb(226, 230, 252);
+body {
+  background-color: rgb(226, 230, 252);
 }
 
- h1{
-    text-transform: uppercase;
-   }
-
-article p{
-   margin-top: 5px;
-   margin-bottom: 25px;
-}
-.header{
-     background-color: rgb(202, 101, 101);
-     display: flex;
-     justify-content: space-between;
+h1 {
+  text-transform: uppercase;
 }
 
-.header_logo{
-    display: flex;
-    align-items: center;
-    margin: 10px;
+article p {
+  margin-top: 5px;
+  margin-bottom: 25px;
 }
-header h4{
-    margin-left: 10px;
-    font-size: 20px;
-}
-
-header img{
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
+.header {
+  background-color: rgb(202, 101, 101);
+  display: flex;
+  justify-content: space-between;
 }
 
-h1{
-    text-align: center;
-    margin-bottom: 10px;
+.header_logo {
+  display: flex;
+  align-items: center;
+  margin: 10px;
 }
-ul{
-   list-style-type:none ;
-   
-}
-
-li{
-   margin: 10px;
-   font-size: 18px;
-}
-a{
-    text-decoration: none;
-}
-.section{
-    display: flex;
-    flex-direction: column;
-    
+header h4 {
+  margin-left: 10px;
+  font-size: 20px;
 }
 
-.section_container{
-    width: 97%;
-    margin: 10px auto;
-   /* height: 250px; */
-    background-color: bisque;
-    text-align: center;
-    padding-top: 10px;
-    border-radius: 10px;
-   
-    
+header img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
 
-
-
-.form-example{
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-
+h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+ul {
+  list-style-type: none;
 }
 
+li {
+  margin: 10px;
+  font-size: 18px;
+}
+a {
+  text-decoration: none;
+}
+.section {
+  display: flex;
+  flex-direction: column;
+}
 
-.footer{
-    background-color: rgb(202, 101, 101);
-    display: flex;
-    flex-direction: column;
-    text-align: center; 
+.section_container {
+  width: 97%;
+  margin: 10px auto;
+  /* height: 250px; */
+  background-color: bisque;
+  text-align: center;
+  padding-top: 10px;
+  border-radius: 10px;
+}
+
+.form-example {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.footer {
+  background-color: rgb(202, 101, 101);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 /********************page gallery**************/
-.gallery_button_container{
-    height: 50px;
-    display: flex;
-    justify-content: space-around;
-    margin: 10px 10px
+/* carrousel*/
+.gallery_slider_container {
+  width: 100%;
+  height: 266px;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+  background: #000;
 }
 
-.gallery_caroussel img{
-    height: 250px;
-    width: 100%;
-    object-fit: cover;
-    object-position: top;
-
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.gallery_mosaique{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.active {
+  opacity: 1;
+  z-index: 1;
 }
 
-.gallery_mosaique img{
-    height: 200px;
-    min-width: 200px;
-    object-fit: cover;
-    object-position: top;
-    margin-bottom: 10px;
+.slide img {
+  width: 100%;
+  height: auto;
+  object-fit: unset;
+  object-position: top;
+}
+
+/* fin de carrousel */
+
+.gallery_button_container {
+  position: relative;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 10px;
 }
 
 .gallery_colonne img {
-    height: 350px;
-    width: 98%;
-    object-fit: cover;
-    object-position: top;
-    margin-bottom: 10px;
+  height: 350px;
+  width: 98%;
+  object-fit: cover;
+  object-position: top;
+  margin-bottom: 10px;
+}
+.gallery_mosaique {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
+.gallery_mosaique img {
+  height: 200px;
+  min-width: 200px;
+  object-fit: cover;
+  object-position: top;
+  margin-bottom: 10px;
+}
+
+.error_msg {
+  margin: 7px;
+  margin-left: 20px;
+  color: red;
+  font-weight: 400;
+  display: none;
+}
 
 @media (min-width: 576px) {
-    .gallery_mosaique img{
-        height: 280px;
-        min-width: 280px;
-    }
-    .width_gallery{
-        width: 90%;
-        margin: 0 auto;
-      
-    }
-    .gallery_colonne img {
-        height: 350px;
-       
-    }
-
+  .gallery_mosaique img {
+    height: 280px;
+    min-width: 280px;
+  }
+  .gallery_slider_container {
+    height: 400px;
+    
+  }
+  .width_gallery {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .gallery_colonne img {
+    height: 350px;
+  }
 }
 
 @media (min-width: 768px) {
-    .gallery_caroussel img{
-        height: 450px;    
-    }
+  .gallery_caroussel img {
+    height: 450px;
   }
+  .gallery_slider_container {
+    height: 550px;
+    
+  }
+}
 
 @media (min-width: 1000px) {
-    .width_gallery{
-        width: 70%;
-        margin: 0 auto;
-      
-    }
-    .gallery_colonne img {
-        height: 550px;
-       
-    }
+  .width_gallery {
+    width: 70%;
+    margin: 0 auto;
   }
-
-
+  .gallery_slider_container {
+    height: 800px;
+    
+  }
+  .gallery_colonne img {
+    height: 550px;
+  }
+}
 
 /* ************************ button gallery ************************/
 .styled {
-    border: 0;
-    line-height: 1.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgba(220, 0, 0, 1);
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  border: 0;
+  line-height: 1.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgba(220, 0, 0, 1);
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
 .styled:hover {
-    background-color: rgba(255, 0, 0, 1);
+  background-color: rgba(255, 0, 0, 1);
 }
 
 .styled:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 .styled2 {
-    border: 0;
-    line-height: 1.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgba(220, 0, 0, 1);
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  border: 0;
+  line-height: 1.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  margin-right: 10px;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgba(220, 0, 0, 1);
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
 .styled2:hover {
-    background-color: rgba(255, 0, 0, 1);
+  background-color: rgba(255, 0, 0, 1);
 }
 
 .styled2:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
-
-
-
-
-
 /* ************************ fin button gallery ************************/
-
-
-
 
 /* ************************ page jeux ************************/
 
 .jeux_Jeux_utilisatuer p {
-    font-size: 25px;
-    text-align: center;
+  font-size: 25px;
+  text-align: center;
+}
+
+.jeux_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 98%;
+  height: 60vh;
+}
+.jeux_container h2 {
+  margin-bottom: 10px;
+}
+.jeux_button_container{
+  position: relative;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  margin: 10px 20px;
 
 }
 
-.jeux_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    width: 98%;
-    height: 60vh ;
+.jeux_score{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  padding-bottom: 30px;
 }
-.jeux_container h2{
-    margin-bottom: 10px;
+.jeux_score h3 {
+  font-size: 25px;
 }
+
+
 @media (min-width: 576px) {
-    .styled2 {
-        padding: 0 35px;
-        font-size: 2rem;     
-    }
-    .gallery_button_container{
-        margin-top: 50px;
-    }
-
+  .styled2 {
+    padding: 0 35px;
+    font-size: 2rem;
+  }
+  .gallery_button_container {
+    margin-top: 50px;
+  }
 }
 
 @media (min-width: 768px) {
-    .jeux_container h2 {
-        margin-top: 50px;
-    }
-    .jeux_container p {
-        margin-top: 10px;
-        font-size: 20px;
-    }
-    .jeux_container ul{
-        display: flex;
-        flex-direction: column;
-    }
+  .jeux_container h2 {
+    margin-top: 50px;
   }
-
+  .jeux_container p {
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  .jeux_container ul {
+    display: flex;
+    flex-direction: column;
+  }
+}
 
 /* ************************ fin page jeux ************************/
 
-
-
 @media (min-width: 576px) {
-    li{
-        margin: 10px;
-        font-size: 20px;
-    }
-    ul{
-        margin-top: 10px;
-    }
-
+  li {
+    margin: 10px;
+    font-size: 20px;
+  }
+  ul {
+    margin-top: 10px;
+  }
 }
-
 
 @media (min-width: 768px) {
-  .section_container{
+  .section_container {
     width: 80%;
-    
   }
 
-   ul{
-        display: flex;
-        height: 100%;
-        justify-content: center;
-        text-align: center;
-        margin-top: 10px;
-    }
-
+  ul {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    text-align: center;
+    margin-top: 10px;
+  }
 }
 
-
 @media (min-width: 1000px) {
- 
-   .section{
-   
-     /* flex-wrap: wrap;  */
+  .section {
+    /* flex-wrap: wrap;  */
     width: 80%;
     margin: 0 auto;
-   }
-   article{
+  }
+  article {
     width: 350px;
     display: flex;
     flex-direction: column;
@@ -317,18 +365,14 @@ a{
     background-color: rgb(248, 238, 218);
     padding: 10px;
     margin-bottom: 25px;
+  }
 
-   }
-   
-   .section_container{
+  .section_container {
     /* max-width: 450px; */
     margin-bottom: 75px;
     margin-top: 10px;
     display: flex;
     flex-direction: row;
     /* flex-wrap: wrap; */
-   }
-  
-  
-
+  }
 }
